--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,8 @@ Selamat Datang di Dental Identify
 I agree to the Terms of Service and Privacy Policy</string>
     <string name="sign_up">Sign Up</string>
     <string name="daftar_dengan">------ Atau daftar dengan -----</string>
+
+    <string name="bersama">
+Bersama-sama Kita Menjaga\nKesehatan Mulut
+</string>
 </resources>
