--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@ Bersama-sama Kita Menjaga\nKesehatan Mulut
     <string name="galery">Galery</string>
     <string name="upload_from">Unggah dari :</string>
     <string name="upload_title">Unggah gambar keadaan mulut anda</string>
+    <string name="time">17:00 15 Fevruari 2023</string>
 </resources>
