--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@ Bersama-sama Kita Menjaga\nKesehatan Mulut
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="name">Nama</string>
+    <string name="title_search">Cari riwayat</string>
+    <string name="description_home">Riwayat pengecekan mulut anda</string>
 </resources>
