--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,8 @@ Selamat Datang di Dental Identify
     <string name="dark_mode_off">Light mode</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logout">LogOut</string>
+    <string name="akun">Akun</string>
+    <string name="night_mode">Mode Gelap</string>
+    <string name="language">Bahasa</string>
 </resources>
