--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Dentify Dental Identify</string>
     <string name="title_activity_main">MainActivity</string>
@@ -6,10 +7,12 @@
     <string name="title_settings">Settings</string>
     <string name="title_activity_signup">ActivitySignup</string>
 
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="welcome">Welcome to Dental Identify</string>
-    <string name="senyum">Your Smile Shows Your Health</string>
+    <string name="next">Selanjutnya</string>
+    <string name="previous">Sebelumnya</string>
+    <string name="welcome">
+Selamat Datang di Dental Identify
+</string>
+    <string name="senyum">Senyum Anda Menunjukkan Kesehatan Anda</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
@@ -47,31 +50,31 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
-    <string name="sign_in">Sign in</string>
-    <string name="log_in">Log in</string>
-    <string name="masuk_dengan">----- Sign in with -----</string>
-    <string name="log_guest">----- Sign in as a guest -----</string>
-    <string name="btnGoogle">Sign in with Google</string>
-    <string name="btnFb">Sign in with Facebook</string>
-    <string name="logo">Mouth logo</string>
+    <string name="sign_in">Sign In</string>
+    <string name="log_in">Log In</string>
+    <string name="masuk_dengan">----- Masuk Dengan -----</string>
+    <string name="log_guest">----- Masuk Sebagai Tamu -----</string>
+    <string name="btnGoogle">masuk dengan google</string>
+    <string name="btnFb">masuk dengan Facebook</string>
+    <string name="logo">logo mulut</string>
 
-    <string name="i_agree_to_">I agree to the Terms of Service and Privacy Policy</string>
+    <string name="i_agree_to_">Saya menyetujui Ketentuan Layanan dan Kebijakan Privasi</string>
     <string name="sign_up">Sign Up</string>
-    <string name="daftar_dengan">------ or sign in with -----</string>
+    <string name="daftar_dengan">------ Atau daftar dengan -----</string>
 
-    <string name="bersama">Together We Maintain Oral Health</string>
-    <string name="unggah">Upload</string>
-    <string name="cancel">Cancel</string>
-    <string name="camera">camera</string>
-    <string name="galery">Gallery</string>
-    <string name="upload_from">Upload from :</string>
-    <string name="upload_title">Upload your mouth picture</string>
-    <string name="time">17:00 15 February 2023</string>
+    <string name="bersama">Bersama-sama Kita Menjaga\nKesehatan Mulut</string>
+    <string name="unggah">Unggah</string>
+    <string name="cancel">Batal</string>
+    <string name="camera">Kamera</string>
+    <string name="galery">Galeri</string>
+    <string name="upload_from">Unggah dari :</string>
+    <string name="upload_title">Unggah gambar keadaan mulut anda</string>
+    <string name="time">17:00 15 Febuari 2023</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="name">Name</string>
-    <string name="title_search">Search history</string>
-    <string name="description_home">Your mouth check history</string>
+    <string name="name">Nama</string>
+    <string name="title_search">Cari riwayat</string>
+    <string name="description_home">Riwayat pengecekan mulut anda</string>
 
     <!-- Night Mode Preferences -->
     <string name="pref_dark_title">Dark mode</string>
@@ -82,13 +85,14 @@
     <string name="dark_mode_auto">Automatic</string>
     <string name="dark_mode_on">Dark mode</string>
     <string name="dark_mode_off">Light mode</string>
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="logout">Logout</string>
-    <string name="akun">Account</string>
-    <string name="night_mode">Dark Mode</string>
-    <string name="language">Language</string>
-    <string name="alert_camera">Make sure the lighting is sufficient and the captured image is clear</string>
-    <string name="alert_camera_title">Alert</string>
-    <string name="alert_camera_confirm">Confirm</string>
-    <string name="settings">Settings</string>
-    <string name="option">Option</string>
+    <string name="akun">Akun</string>
+    <string name="night_mode">Mode Gelap</string>
+    <string name="language">Bahasa</string>
+    <string name="alert_camera">Pastikan pencahayaan cukup dan gambar yang ditangkap terlihat dengan jelas</string>
+    <string name="alert_camera_title">Perhatian</string>
+    <string name="alert_camera_confirm">Konfirmasi</string>
+    <string name="settings">Pengaturan</string>
+    <string name="option">Opsi</string>
 </resources>
