--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,6 @@
     <string name="alert_camera_confirm">Confirm</string>
     <string name="settings">Settings</string>
     <string name="option">Option</string>
+    <string name="terms_of_service_privacy_policy"><![CDATA[Terms of service & Privacy policy]]></string>
+    <string name="tos_check_confirm">I agree to the Terms of Service and Privacy Policy</string>
 </resources>
