--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="time">17:00 15 February 2023</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="name">Name</string>
     <string name="title_search">Search history</string>
     <string name="description_home">Your mouth check history</string>
